--- a/css/global.css
+++ b/css/global.css
@@ -49,3 +49,46 @@ body {
 .padding-y {
   padding: 20px 0;
 }
+
+.text-medium {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+.separator {
+  width: 100%;
+  height: 4px;
+  background-color: black;
+  border-radius: 10px;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+@media (max-width: 1280px) {
+  h2 {
+    font-size: 3.3rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .text-medium {
+    font-size: 1.1rem;
+  }
+
+  h2 {
+    font-size: 2.3rem;
+  }
+}
+
+@media (max-width: 640px) {
+  h2 {
+    font-size: 1.8rem;
+  }
+}
