--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Homenaje&display=swap');
+
 .main {
   border: 4px solid black;
   padding: 25px;
@@ -25,6 +27,9 @@
   }
 }
 
+/*-----------------------------------------*/
+/*-----------------------------------------*/
+/*-----------------------------------------*/
 /*-----------------------------------------*/
 
 .article-introduction {
@@ -163,3 +168,172 @@
 }
 
 /*-----------------------------------------*/
+/*-----------------------------------------*/
+/*-----------------------------------------*/
+/*-----------------------------------------*/
+
+.article-bottom {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto auto;
+  gap: 30px;
+}
+
+.article-1 {
+  margin-top: -15px;
+  height: fit-content;
+}
+
+.article-1-title {
+  font-size: 4rem;
+  font-weight: 800;
+}
+
+.article-1-img {
+  height: 130px;
+  float: left;
+  padding-right: 10px;
+}
+
+.article-2-text {
+  margin: 20px 0;
+}
+
+.article-2-img {
+  height: 185px;
+  width: 190px;
+  float: left;
+  padding-right: 13px;
+  margin-top: 28px;
+}
+
+.article-3 {
+  grid-row: 2 / 3;
+}
+
+.article-3-title {
+  font-family: "Homenaje", sans-serif;
+  font-weight: 500;
+  font-size: 20;
+  width: 15%;
+  text-wrap: nowrap;
+  transform: rotate(-90deg) translate(-97%, 38%);
+}
+
+.form-container {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.contact-input {
+  height: 45px;
+  background-color: rgba(239, 225, 216, 0.4);
+  font-size: larger;
+  padding: 5px;
+}
+
+.text-input {
+  height: 200px;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.contact-submit {
+  width: fit-content;
+  padding: 5px 15px;
+  font-size: 22px;
+  font-weight: 700;
+  background-color: rgba(215, 196, 168, 0.4);
+}
+
+.article-4 {}
+
+.article-4-title {
+  font-size: 38px;
+  font-weight: 700;
+  margin-right: 20px;
+  margin-top: -28px;
+  text-wrap: nowrap;
+}
+
+.article-4-button {
+  width: 100%;
+  margin: 20px 0px;
+}
+
+.article-4-button:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 1280px) {
+  .article-3-title {
+    transform: rotate(-90deg) translate(-45%, 40%);
+  }
+}
+
+@media (max-width: 1024px) {
+  .article-1 {
+    grid-row: 1;
+    grid-column: 1 / 3;
+  }
+
+  .article-2 {
+    grid-row: 2;
+    grid-column: 1 / 3;
+  }
+
+  .article-2-img {
+    float: right;
+  }
+
+  .article-2-mid-separator {
+    margin-top: 50px;
+  }
+
+  .article-3 {
+    grid-row: 4;
+    grid-column: 1 / 3;
+  }
+
+  .article-4 {
+    grid-row: 3;
+    grid-column: 1 / 3;
+  }
+}
+
+@media (max-width: 768px) {
+  .article-1-title {
+    font-size: 48px;
+    padding: 0px 0px 20px 0px;
+  }
+
+  .article-1-img {
+    height: 120px;
+    padding: 0px 10px 6px 0px;
+  }
+
+  .article-2-img {
+    padding-right: 0;
+    padding-left: 14px;
+  }
+
+  .article-3-title {
+    font-size: 48px;
+    transform: rotate(-90deg) translate(-25%, 42%);
+  }
+}
+
+@media (max-width: 390px) {
+  .article-1-img {
+    height: auto;
+    padding: 0;
+    width: 100%;
+  }
+}
