--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,15 @@
     height: max-content;
     grid-area: 7 / 1 / 8 / 6;
   }
+
+  .article-call-to-action .separator:first-child {
+    display: none;
+  }
+
+  .article-call-to-action .separator:last-child {
+    display: block;
+    margin: 10px 0;
+  }
 }
 
 /*# AFFICHAGE MOBILE*/
@@ -131,15 +140,6 @@
   .article-call-to-action {
     height: max-content;
     grid-area: 5 / 1 / 6 / 6;
-  }
-
-  .article-call-to-action .separator:first-child {
-    display: none;
-  }
-
-  .article-call-to-action .separator:last-child {
-    display: block;
-    margin: 10px 0;
   }
 
   .cta-button {
@@ -173,16 +173,16 @@
 /*-----------------------------------------*/
 
 .article-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   margin-top: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto;
-  gap: 30px;
 }
 
 .article-1 {
   margin-top: -15px;
   height: fit-content;
+  width: 45%;
 }
 
 .article-1-title {
@@ -195,6 +195,11 @@
   float: left;
   padding-right: 10px;
 }
+
+.article-2 {
+  width: 45%;
+}
+
 
 .article-2-text {
   margin: 20px 0;
@@ -209,7 +214,8 @@
 }
 
 .article-3 {
-  grid-row: 2 / 3;
+  width: 45%;
+  margin-top: -250px;
 }
 
 .article-3-title {
@@ -253,7 +259,9 @@
   background-color: rgba(215, 196, 168, 0.4);
 }
 
-.article-4 {}
+.article-4 {
+  width: 45%;
+}
 
 .article-4-title {
   font-size: 38px;
@@ -272,6 +280,7 @@
   cursor: pointer;
 }
 
+
 @media (max-width: 1280px) {
   .article-3-title {
     transform: rotate(-90deg) translate(-45%, 40%);
@@ -279,12 +288,21 @@
 }
 
 @media (max-width: 1024px) {
+  .article-bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+    gap: 30px;
+  }
+
   .article-1 {
+    width: 100%;
     grid-row: 1;
     grid-column: 1 / 3;
   }
 
   .article-2 {
+    width: 100%;
     grid-row: 2;
     grid-column: 1 / 3;
   }
@@ -298,11 +316,14 @@
   }
 
   .article-3 {
+    width: 100%;
     grid-row: 4;
     grid-column: 1 / 3;
+    margin-top: 0;
   }
 
   .article-4 {
+    width: 100%;
     grid-row: 3;
     grid-column: 1 / 3;
   }
@@ -327,6 +348,8 @@
   .article-3-title {
     font-size: 48px;
     transform: rotate(-90deg) translate(-25%, 42%);
+    pointer-events: none;
+    user-select: none;
   }
 }
 
